--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -207,7 +207,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="edit_text_in_center_of_screen">在屏幕中央编辑文本</string>
     <string name="clipboard">剪切板</string>
     <string name="select_existing_document">选择已有文档</string>
-    <string name="open_source_licenses">开源许可协议</string>
+    <string name="open_source_licenses">开源代码许可</string>
     <string name="rate_this_app">评价本应用</string>
     <string name="translate">翻译</string>
     <string name="more_info_and_help">更多信息与帮助</string>
