--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -446,6 +446,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="match_all">Match All</string>
     <string name="dynamic_notebook_root_links">Dynamic search for notebook root</string>
     <string name="search_dynamically_for_notebook_root">In order to follow wiki links, dynamically search for the notebook.zim file to identify the root directory for the current notebook. Check this if you use multiple zim notebooks or the notebook directory set in the app does not correspond to your zim notebook.</string>
-    <string name="share_into_prefix_format_dialog">Text added to any text shared into Markor. Follows Android\'s SimpleDateFormat rules.\n\nShared text will replace a single string placeholder (%s) if present. Otherwise this will be prepended to shared text.</string>
+    <string name="share_into_prefix_format_dialog">Prefix for any text shared into Markor. Follows Android\'s SimpleDateFormat rules.\n\n If a single string placeholder \'%s\' (including quotes - see SimpleDateFormat rules) is present, it will be replaced with the shared text. Otherwise this will be used as a prefix.</string>
     <string name="share_into_prefix">Shared text prefix</string>
 </resources>
