--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -430,4 +430,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="match_all">Täsmää Kaikki</string>
     <string name="dynamic_notebook_root_links">Dynaaminen haku muistikirjan juurille</string>
     <string name="search_dynamically_for_notebook_root">Seuratakseen wiki linkkejä, etsi dynaamisesti notebook.zim-tiedostoa, joka tunnistaa nykyisen muistikirjan juurihakemiston. Valitse tämä, jos käytät useita zim-muistikirjoja tai sovelluksessa asetettu notebook-hakemisto ei vastaa zim-muistikirjaasi.</string>
+    <string name="share_into_format_prefix_for_text_shared">Muoto/etuliite Markoriin jaetulle tekstille. Seuraa Androidin SimpleDateFormat sääntöjä.\n\nKäytä paikkamerkkiä \'%s\' (jota ympäröi yksittäinen lainaus) asettaaksesi jaetun tekstin. Jos jaettua tekstiä ei ole määritelty, se on liitetty ja se muoto, jota käytetään etuliitteenä.</string>
+    <string name="share_into_format">Jaa muotoon</string>
 </resources>
