--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -173,6 +173,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="swipe_to_change_to_edit_or_view_mode">ସମ୍ପାଦନ କିମ୍ୱା ଦର୍ଶନ ମୋଡ୍ କୁ (ସମ୍ପ୍ରତି ମୋଡର ବିପରୀତକୁ) ଯିବା ପାଇଁ ସ୍ଵାଇପ୍ କରନ୍ତୁ</string>
     <string name="folder_first">ପ୍ରଥମେ ଫୋଲ୍ଡର୍</string>
     <string name="internal_storage">ଅନ୍ତର୍ନିହିତ ଷ୍ଟୋରେଜ୍‌</string>
+    <string name="open_the_document_from_main_view">ଆପଣ ତଳେଥିବା ମୁଖ୍ୟ ଦର୍ଶନ, ଫାଇଲ୍ ବ୍ରାଉଜର୍ କିମ୍ୱା ଉନ୍ମୋଚକ ରୁ ଡକ୍ୟୁମେଣ୍ଟ୍ ଖୋଲିପାରିବେ। Markorରେ ଅଂଶିଦାରୀ ପାଠ୍ୟ ଯୋଡ଼ିବାର ଏକ ବିକଳ୍ପ ମଧ୍ୟ ଅଛି।</string>
     <string name="black">କଳା</string>
     <string name="white">ଧଳା</string>
     <string name="view">ଦର୍ଶନ</string>
